// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar Demo Basic 1`] = `
<div class="n22-example-child n22-example-child-action-bar n22-example-child-0">
  <div class="n22-action-bar n22-action-bar-shadow">
    <div class="n22-action-bar-container">
      <!---->
      <div class="n22-action-bar-group"><button type="button" id="action-bar-id-0" class="n22-button n22-action-bar-button primary active block">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>主要按钮</span></p>
          </div>
        </button></div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Demo Multiple buttons 1`] = `
<div class="n22-example-child n22-example-child-action-bar n22-example-child-0">
  <div class="n22-action-bar n22-action-bar-shadow">
    <div class="n22-action-bar-container">
      <!---->
      <div class="n22-action-bar-group"><button type="button" id="action-bar-id-0" class="n22-button n22-action-bar-button primary active block plain">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>次要按钮</span></p>
          </div>
        </button><button type="button" id="action-bar-id-1" class="n22-button n22-action-bar-button primary active block">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>主要按钮</span></p>
          </div>
        </button></div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Demo Multiple buttons and disabled button 1`] = `
<div class="n22-example-child n22-example-child-action-bar n22-example-child-1">
  <div class="n22-action-bar n22-action-bar-shadow">
    <div class="n22-action-bar-container">
      <!---->
      <div class="n22-action-bar-group"><button type="button" disabled="disabled" id="action-bar-id-0" class="n22-button n22-action-bar-button disabled active block plain">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>次要按钮</span></p>
          </div>
        </button><button type="button" disabled="disabled" id="action-bar-id-1" class="n22-button n22-action-bar-button disabled active block">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>主要按钮</span></p>
          </div>
        </button></div>
    </div>
  </div>
</div>
`;

exports[`ActionBar Demo With slot 1`] = `
<div class="n22-example-child n22-example-child-action-bar n22-example-child-3">
  <div class="n22-action-bar n22-action-bar-shadow">
    <div class="n22-action-bar-container">
      <div class="n22-action-bar-text"><span class="price">¥128.00<small>起</small></span></div>
      <div class="n22-action-bar-group"><button type="button" id="action-bar-id-0" class="n22-button n22-action-bar-button primary active block">
          <div class="n22-button-inner">
            <!---->
            <p class="n22-button-content"><span>主要按钮</span></p>
          </div>
        </button></div>
    </div>
  </div>
</div>
`;
